--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,13 @@ body {
     background-color: #900c3f;
 }
 
+.tab-content {
+    border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    padding: 10px;
+}
+
 @media (max-width: 575px) {
     .desaparece {
         display: none;
