--- a/css/styles.css
+++ b/css/styles.css
@@ -56,3 +56,18 @@ body {
         display: none;
     }
 }
+
+.carousel {
+    background: #900c3f;
+}
+
+.carousel-item {
+    height: 300px;
+}
+
+.carousel-item img {
+    position: absolute;
+    top: 0px;
+    left: 0;
+    min-height: 300px;
+}
